<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

			<TextView
			    android:id="@+id/textSetEvent"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:layout_marginTop="10dp"
			    android:text="@string/create_event_header"
			    android:textAppearance="?android:attr/textAppearanceMedium" />

			<Button
			    android:id="@+id/btnSelectEventType"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:text="@string/create_event_select_event_type_title" />

			<EditText
			    android:id="@+id/messageInput"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:ems="10"
			    android:inputType="textMultiLine" >

				<requestFocus />
			</EditText>

			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_gravity="bottom" >

				<TextView
				    android:id="@+id/messageInputTitle"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_marginLeft="10dp"
				    android:text="@string/create_event_message_title"
				    android:textAppearance="?android:attr/textAppearanceSmall" />

				<Button
				    android:id="@+id/btnGenerateMessage"
				    style="?android:attr/buttonStyleSmall"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/generate_message"
				    android:visibility="invisible" />

			</LinearLayout>
			
			<Button
			    android:id="@+id/btnChooseContacts"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/choose_contacts"
			    android:visibility="visible"
			     />
			<!-- 
			<EditText
			    android:id="@+id/txtCreateEventPhonenumber"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:ems="10"
			    android:inputType="phone"
			    >

			</EditText>

			<TextView
			    android:id="@+id/txtPhonenumber"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:text="@string/create_event_phonenumber"
			    android:textAppearance="?android:attr/textAppearanceSmall"
			    />
 -->
			<Button
			    android:id="@+id/buttonOpenDatePicker"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:text="@string/create_event_date_title" />

			<TextView
			    android:id="@+id/txtDate"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:text="@string/create_event_data"
			    android:textAppearance="?android:attr/textAppearanceSmall" />

			<Button
			    android:id="@+id/buttonCreateEventTime"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:text="@string/create_event_select_time_title" />

			<TextView
			    android:id="@+id/txtTime"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:text="@string/create_event_time"
			    android:textAppearance="?android:attr/textAppearanceSmall" />

			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_gravity="bottom" >

				<Button
				    android:id="@+id/btnCreateEventCancel"
				    android:layout_width="0dp"
				    android:layout_height="wrap_content"
				    android:layout_marginLeft="10dp"
				    android:layout_marginRight="10dp"
				    android:layout_weight="1"
				    android:text="@string/create_event_cancel_header" />

				<Button
				    android:id="@+id/btnCreateEventSave"
				    android:layout_width="0dp"
				    android:layout_height="wrap_content"
				    android:layout_marginLeft="10dp"
				    android:layout_marginRight="10dp"
				    android:layout_weight="1"
				    android:text="@string/create_event_save_header" />

			</LinearLayout>

</LinearLayout>